--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@stomp/stompjs": "^7.3.0",
     "@tanstack/react-query": "^5.48.0",
     "@types/yup": "^0.32.0",
     "axios": "^1.7.7",
